[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/SpaceStore/SpaceStore.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Space Store/space_store_v2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 144 )

[node name="SpaceStore" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
range_z_max = 0

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 162, 306 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -10, -200, 20, 20 )

[node name="StoreWait" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_SpaceStore_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="StoreWait" to="." method="_on_StoreWait_timeout"]
